--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.1.0",
     "react-router": "^7.7.1",
     "react-router-dom": "^7.7.1",
+    "react-spinners": "^0.17.0",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
