--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "hamburger-react": "^2.5.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.7.1",
     "react-router-dom": "^7.7.1",
     "react-spinners": "^0.17.0",
